--- a/www/package.json
+++ b/www/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.7",
     "daisyui": "^2.28.0",
+    "date-fns": "^2.29.3",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.10.2",
     "js-cookie": "^3.0.1",
